<resources>
    <string name="app_name">Velib-App</string>
    <string name="details_title_nb_bike">Nombre de vélos disponibles :</string>
    <string name="details_title_nb_place">Nombre de places disponibles :</string>
    <string name="details_title_capacity">Capacité de la station :</string>
    <string name="details_bikes_picture_description">number_bikes_picture</string>
    <string name="details_docks_picture_description">number_bikes_picture</string>
    <string name="details_title_nb_mechanical"><![CDATA[-> Type mécanique :]]></string>
    <string name="details_title_nb_electrical"><![CDATA[-> Type électrique :]]></string>
    <string name="map_location_button">Location</string>
    <string name="map_api_button">Reload map data</string>
    <string name="splash_screen_image_description">image of a bike</string>
    <string name="confirm_delete_dialog_title">Suppression favoris</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="filled_star_image_description">logo favoris plein</string>
    <string name="mechanical_bike_picture_description">mechanical bike</string>
    <string name="electrical_bike_picture_description">electrical bike</string>
    <string name="last_updated_station_date">Dernière mise à jour le : %1$s</string>
    <string name="rental_status_credit_card">"Paiement disponible par carte de crédit"</string>
    <string name="delete_favoris_picture_description">delete_favoris_picture</string>
</resources>