<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/details_xml"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/im_details_fond"
        android:orientation="vertical">


        <TextView
            android:id="@+id/details_station_name_textview"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/green_text"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp" />

        <LinearLayout
            android:id="@+id/details_nb_bike_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <ImageView
                android:id="@+id/details_nb_bike_imageview"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/im_details_nb_bike"
                android:contentDescription="@string/details_bikes_picture_description" />

            <TextView
                android:id="@+id/details_title_nb_bike_textview"
                android:textStyle="bold"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:textColor="@color/green_text"
                android:text="@string/details_title_nb_bike" />

            <TextView
                android:id="@+id/details_nb_bike_textview"
                android:textSize="18sp"
                android:textColor="@color/green_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/details_nb_mechanical_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <ImageView
                android:id="@+id/details_nb_mechanical_imageview"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/details_docks_picture_description" />

            <TextView
                android:id="@+id/details_title_nb_mechanical_textview"
                android:textStyle="bold"
                android:textColor="@color/green_text"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:text="@string/details_title_nb_mechanical" />

            <TextView
                android:id="@+id/details_nb_mechanical_textview"
                android:textSize="18sp"
                android:textColor="@color/green_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/details_nb_electrical_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <ImageView
                android:id="@+id/details_nb_electrical_imageview"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/details_docks_picture_description" />

            <TextView
                android:id="@+id/details_title_nb_electrical_textview"
                android:textStyle="bold"
                android:textColor="@color/green_text"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:text="@string/details_title_nb_electrical" />

            <TextView
                android:id="@+id/details_nb_electrical_textview"
                android:textSize="18sp"
                android:textColor="@color/green_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/details_nb_place_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <ImageView
                android:id="@+id/details_nb_place_imageview"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/im_details_nb_place"
                android:contentDescription="@string/details_docks_picture_description" />

            <TextView
                android:id="@+id/details_title_nb_place_textview"
                android:textStyle="bold"
                android:textColor="@color/green_text"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:text="@string/details_title_nb_place" />

            <TextView
                android:id="@+id/details_nb_place_textview"
                android:textSize="18sp"
                android:textColor="@color/green_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/details_capacity_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <ImageView
                android:id="@+id/details_capacity_imageview"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/im_details_capacity"
                android:contentDescription="@string/details_docks_picture_description" />

            <TextView
                android:id="@+id/details_title_capacity_textview"
                android:textStyle="bold"
                android:textColor="@color/green_text"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:text="@string/details_title_capacity" />

            <TextView
                android:id="@+id/details_capacity_textview"
                android:textSize="18sp"
                android:textColor="@color/green_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/rental_methods_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_green"
                android:textSize="14sp"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="10dp" />
        </LinearLayout>


        <ImageView
            android:id="@+id/details_velo_imageview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/details_docks_picture_description"
            android:src="@drawable/im_velo" />

        <TextView
            android:id="@+id/details_last_reported_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/light_green"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="20dp" />

    </LinearLayout>
</ScrollView>
